I changed the pictures of home

--- a/template/index.html
+++ b/template/index.html
@@ -5,9 +5,9 @@
   <!-- Required meta tags-->
   <meta charset="utf-8">
   <!-- Title-->
-  <title>CodeX - Personal Portfolio / Resume / CV / vCard Template</title>
+  <title>Ramon Lebron - CV</title>
   <!-- Description-->
-  <meta name="description" content=" Personal Portfolio / Resume / CV / vCard Template">
+  <meta name="description" content="Mi portafolio / CV personal">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Favicons-->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -26,8 +26,6 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- CSS Color scheme-->
   <link id="color-scheme" rel="stylesheet" href="css/colors/main-red.css">
-  <!-- Custom CSS (Add your custom CSS styles to this file)-->
-  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
@@ -46,8 +44,8 @@
         </div>
       </nav>
       <nav class="sidebar" data-simplebar>
-        <div class="sidebar-header"><a href="#home" data-scroll><img class="img-fluid sidebar-avatar" src="img/profile-avatar.jpg" alt="Profile avatar"></a><span class="sidebar-name">Alex Smith</span>
-          <p class="sidebar-status">Available for work</p>
+        <div class="sidebar-header"><a data-scroll><img class="img-fluid sidebar-avatar" src="img/profile-avatar.png" alt="Profile avatar"></a><span class="sidebar-name">Ram&oacute;n E. Lebr&oacute;n</span>
+          <p class="sidebar-status">Web application developer</p>
         </div>
         <div class="sidebar-menu">
           <ul class="list-unstyled list-menu">
@@ -56,7 +54,6 @@
             <li><a class="nav-link" href="#services-area" data-scroll>Services</a></li>
             <li><a class="nav-link" href="#portfolio-area" data-scroll>Portfolio</a></li>
             <li><a class="nav-link" href="#testimonials-area" data-scroll>Clients</a></li>
-            <li><a class="nav-link" href="#blog-area" data-scroll>Blog</a></li>
             <li><a class="nav-link" href="#contact-area" data-scroll>Contact</a></li>
           </ul>
         </div>
@@ -65,22 +62,19 @@
     <div class="sections-wrapper">
       <!-- Sections-->
       <!-- Home-->
-      <section class="home-area element-cover-bg" id="home-area" style="background-image:url(img/home.jpg)">
+      <section class="home-area element-cover-bg galaxy-variant" id="home-area" style="background-image:url(img/home.jpg)">
+        <div id="particles-js"></div>
         <div class="container h-100">
           <div class="row h-100 align-items-center justify-content-center">
             <div class="col-12 col-lg-8 home-content text-center">
-              <h1 class="home-name">Alex <span>Smith</span></h1>
-              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Designer</b><b>Freelancer</b></span></h4>
+              <h1 class="home-name">Ram&oacute;n E.<span> Lebr&oacute;n</span></h1>
+              <h4 class="cd-headline clip home-headline">I’m a <span class="cd-words-wrapper single-headline"><b class="is-visible">Developer</b><b>Database administrator</b><b>Freelancer</b></span></h4>
             </div><a href="#about-area" data-scroll>
-              <div class="home-mouse">
-                <div class="mouse-shape">
-                  <div class="mouse-wheel"></div>
-                </div>
-              </div>
             </a>
           </div>
         </div>
       </section>
+
       <!-- About-->
       <section class="single-section about-area" id="about-area">
         <div class="container">
@@ -99,25 +93,25 @@
             <div class="col-12 col-lg-7 about-content">
               <div class="content-block">
                 <h2 class="content-subtitle">Who am i?</h2>
-                <h6 class="content-title">I'm Alex Smith, a visual UX/UI Designer and Web Developer</h6>
+                <h6 class="content-title">I'm Ram&oacute;n E. Lebr&oacute;n, a Web application developer and Database Administrator</h6>
                 <div class="content-description">
-                  <p>I am a freelancer based in the United Kingdom and i have been building noteworthy UX/UI designs and websites for years, which comply with the latest design trends. I help convert a vision and an idea into meaningful and useful products. Having a sharp eye for product evolution helps me prioritize tasks, iterate fast and deliver faster.</p>
+                  <p>I am a freelancer based in the Dominican Republic Tengo experiencia en desarrollo de software y en el uso de herramientas como Visual Studio, Visual Studio Code y Microsoft Office. He trabajado con MySQL y SQL Server para administrar bases de datos. Puedo crear páginas web funcionales con HTML, CSS, Bootstrap, JavaScript y PHP. Mi enfoque se basa en comprender las necesidades y objetivos específicos de cada empresa, asegurando que los sistemas informáticos funcionen eficientemente, brinden resultados de calidad y estén alineados con las metas estratégicas de la organización.</p>
                 </div>
                 <address class="content-info">
                   <div class="row">
                     <div class="col-12 col-md-6 single-info"><span>Name:</span>
-                      <p>Alex Smith</p>
+                      <p>Ram&oacute;n E. Lebr&oacute;n</p>
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>Email:</span>
-                      <p><a href="mailto:daniel@example.com">alex@example.com</a></p>
+                      <p><a href="mailto:daniel@example.com">ramonlebronc@gmail.com</a></p>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-12 col-md-6 single-info"><span>Age:</span>
-                      <p>21</p>
+                      <p>18</p>
                     </div>
                     <div class="col-12 col-md-6 single-info"><span>From:</span>
-                      <p>Liverpool, UK</p>
+                      <p>Santo Domingo, RD</p>
                     </div>
                   </div>
                 </address><a class="btn content-download button-main button-scheme" href="#0" role="button">Download CV</a><a class="btn content-work button-main" data-scroll="" href="#portfolio-area" role="button">My Work</a>
@@ -520,69 +514,7 @@
           </div>
         </div>
       </section>
-      <!-- Blog-->
-      <section class="single-section blog-area" id="blog-area">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <div class="section-heading">
-                <h2 class="section-title">My Blog</h2>
-                <p class="section-description">Check out my latest blog posts</p>
-              </div>
-            </div>
-          </div>
-          <div class="row justify-content-center">
-            <!-- Single post-->
-            <div class="col-12 col-sm-8 col-lg-4">
-              <div class="card single-post"><a class="post-img" href="#0"><img class="card-img-top" src="img/post-1.jpg" alt="Blog post"><span class="content-date">15 Nov, 19</span></a>
-                <div class="card-body post-content"><a href="#0">
-                    <h5 class="card-title content-title">Top tools for Photographers</h5>
-                  </a>
-                  <p class="card-text content-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                  <div class="content-tags"><span class="tags-title">Tags:</span>
-                    <ul class="list-unstyled list-inline tags-list">
-                      <li class="list-inline-item"><a href="#0">Photography</a></li>
-                      <li class="list-inline-item"><a href="#0">Freelance</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Single post-->
-            <div class="col-12 col-sm-8 col-lg-4">
-              <div class="card single-post"><a class="post-img" href="#0"><img class="card-img-top" src="img/post-2.jpg" alt="Blog post"><span class="content-date">8 Aug, 19</span></a>
-                <div class="card-body post-content"><a href="#0">
-                    <h5 class="card-title content-title">Take a tour of my office</h5>
-                  </a>
-                  <p class="card-text content-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                  <div class="content-tags"><span class="tags-title">Tags:</span>
-                    <ul class="list-unstyled list-inline tags-list">
-                      <li class="list-inline-item"><a href="#0">Events</a></li>
-                      <li class="list-inline-item"><a href="#0">Personal</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Single post-->
-            <div class="col-12 col-sm-8 col-lg-4">
-              <div class="card single-post"><a class="post-img" href="#0"><img class="card-img-top" src="img/post-3.jpg" alt="Blog post"><span class="content-date">11 Dec, 18</span></a>
-                <div class="card-body post-content"><a href="#0">
-                    <h5 class="card-title content-title">How i became a Web Designer</h5>
-                  </a>
-                  <p class="card-text content-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, porro rem quod illo quam, eum alias id, repellendus magni, quas.</p>
-                  <div class="content-tags"><span class="tags-title">Tags:</span>
-                    <ul class="list-unstyled list-inline tags-list">
-                      <li class="list-inline-item"><a href="#0">Web Design</a></li>
-                      <li class="list-inline-item"><a href="#0">Freelance</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+
       <!-- Contact-->
       <section class="single-section contact-area alt-bg" id="contact-area">
         <div class="container">
@@ -650,8 +582,6 @@
   <script src="js/jquery.mb.YTPlayer.min.js"></script>
   <script src="js/particles.js"></script>
   <script src="js/main.js"></script>
-  <!-- Custom JS (Add your custom JS scripts to this file)-->
-  <script src="js/custom.js"></script>
 </body>
 
 </html>
